--- a/templates/mysql_creates.tmpl
+++ b/templates/mysql_creates.tmpl
@@ -1,7 +1,15 @@
-{{range $entity := .Entities}}
+{{- range $entity := .Entities -}}
 CREATE TABLE IF NOT EXISTS `{{$entity.Name}}` ( {{range $field := $entity.Fields}}
-  `{{$field.Name}}` {{$field.Type}} {{$field.Null}} {{$field.Unique}} {{$field.Default}},{{end}}  
-  PRIMARY KEY (`{{$entity.PrimaryKeysIdentifiers}}`),{{range $index := $entity.Indexes}}
-  INDEX `{{$index.Name}}` {{$index.FieldNamesIdentifiers}}{{if eq $index.HasComma true }},{{end}}{{end}})  
+    `{{$field.Name}}` {{$field.Type}} {{$field.Postfix}},{{- end}}  
+    {{ range $index := $entity.Indexes}}
+        {{- if eq $index.Type "primary" -}}
+    PRIMARY KEY (`{{$entity.PrimaryKeysIdentifiers}}`)
+            {{- if eq $index.HasComma true }},{{end -}}
+        {{- else}}
+    {{$index.TypePrefix}}INDEX `{{$index.Name}}` {{$index.FieldNamesIdentifiers}}
+            {{- if eq $index.HasComma true }},{{end -}}
+        {{- end}}
+    {{- end}})
 ENGINE = InnoDB;
-{{end}}
+
+{{end -}}
