--- a/templates/mysql_deletes.tmpl
+++ b/templates/mysql_deletes.tmpl
@@ -1,6 +1,7 @@
-{{range $entity := .Entities}}
+{{- range $entity := .Entities -}}
 -- name: Delete{{$entity.NameTitle}} :execresult
 DELETE FROM `{{$entity.Name}}`
 WHERE
 {{$entity.PrimaryKeysWhereClause}};
-{{end}}
+
+{{end -}}
