--- a/templates/mysql_inserts.tmpl
+++ b/templates/mysql_inserts.tmpl
@@ -1,7 +1,18 @@
-{{range $entity := .Entities}}
+{{- range $entity := .Entities -}}
 -- name: Insert{{$entity.NameTitle}} :execresult
 INSERT INTO `{{$entity.Name}}`
-({{range $field := $entity.Fields}}`{{$field.Name}}`{{if eq $field.HasComma true}},{{end}}{{end}})
+(
+    {{- range $field := $entity.Fields -}}
+        `{{$field.Name}}`
+        {{- if eq $field.HasComma true}},{{end -}}
+    {{- end -}}
+)
 VALUES
-({{range $field := $entity.Fields}}?{{if eq $field.HasComma true}},{{end}}{{end}});
-{{end}}
+(
+    {{- range $field := $entity.Fields -}}
+        ?
+        {{- if eq $field.HasComma true}},{{end -}}
+    {{- end -}}
+);
+
+{{end -}}
