--- a/templates/mysql_updates.tmpl
+++ b/templates/mysql_updates.tmpl
@@ -1,8 +1,9 @@
-{{range $entity := .Entities}}
+{{- range $entity := .Entities -}}
 -- name: Update{{$entity.NameTitle}} :exec
 UPDATE `{{$entity.Name}}`
 SET
 {{$entity.UpdateFields}}
 WHERE
 {{$entity.PrimaryKeysWhereClause}};
-{{end}}
+
+{{end -}}
