--- a/templates/mysql_selects_indexed_simple.tmpl
+++ b/templates/mysql_selects_indexed_simple.tmpl
@@ -3,7 +3,7 @@
 -- {{$entity.Name}} selects:
 
     {{- /* regular selects */ -}}
-    {{ range $select := $entity.SelectStatements -}} {{- /* start select range */ -}}
+    {{- range $select := $entity.SelectStatements}} {{- /* start select range */ -}}
         {{- if eq $select.CombinedIndexes false}}
 -- name: Fetch{{$select.Name}} :many
 SELECT {{ range $field := $entity.Fields -}}
@@ -13,14 +13,14 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{$field.Name}}` = ? 
-    {{- if ne $field.IsLast true}}AND{{end -}}
-    {{- end}} {{ if eq $select.IsPrimary false -}} LIMIT ?, ?; {{- else -}} ; {{end}}
+    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
+    {{- end}}{{- if eq $select.IsPrimary true }};{{- end}}
+{{ if eq $select.IsPrimary false -}}LIMIT ?, ?;{{- end}}
         {{ end -}}
-    {{ end -}}
+    {{ end }}
 
     {{- /* selects for update */ -}}
-    {{ range $select := $entity.SelectStatements -}} {{- /* start select range */ -}}
+    {{- range $select := $entity.SelectStatements}} {{- /* start select range */ -}}
         {{- if and (eq $select.CombinedIndexes false) (eq $select.IsPrimary true) }}
 -- name: Fetch{{$select.Name}}ForUpdate :many
 SELECT {{ range $field := $entity.Fields -}}
@@ -30,17 +30,16 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{$field.Name}}` = ? 
-    {{- if ne $field.IsLast true}}AND{{end -}}
+    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
     {{- end}}
 FOR UPDATE;
         {{ end -}}
-    {{ end -}}
+    {{ end }}
 
-{{range $select := $entity.SelectStatements -}}
-    {{- if and (eq $select.SortSupported true) (eq $select.CombinedIndexes false) -}}
-        {{- range $timeField := $select.TimeFields -}}
--- name: Fetch{{$select.Name}}OrderedBy{{$timeField.Name}}ASC :many
+    {{- range $select := $entity.SelectStatements}}
+        {{- if and (eq $select.SortSupported true) (eq $select.CombinedIndexes false) }}
+            {{- range $timeField := $select.TimeFields }}
+-- name: Fetch{{$select.Name}}OrderedBy{{$timeField.NameTitle}}ASC :many
 SELECT {{ range $field := $entity.Fields -}}
             `{{$field.Name}}`
             {{- if eq $field.HasComma true}},{{end -}}
@@ -48,13 +47,12 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{$field.Name}}` = ? 
-    {{- if ne $field.IsLast true}}AND{{end -}}
+    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
     {{- end}} 
-    ORDER BY {{$timeField.Identifier}} ASC
-    LIMIT ?, ?;
+ORDER BY {{$timeField.Name}} ASC
+LIMIT ?, ?;
 
--- name: Fetch{{$select.Name}}OrderedBy{{$timeField.Name}}DESC :many
+-- name: Fetch{{$select.Name}}OrderedBy{{$timeField.NameTitle}}DESC :many
 SELECT {{ range $field := $entity.Fields -}}
             `{{$field.Name}}`
             {{- if eq $field.HasComma true}},{{end -}}
@@ -62,15 +60,14 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}}
-    `{{$field.Name}}` = ? 
-    {{- if ne $field.IsLast true}}AND{{end -}}
+    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true }} AND {{ end -}} 
     {{- end}} 
-    ORDER BY {{$timeField.Identifier}} DESC
-    LIMIT ?, ?;
+ORDER BY {{$timeField.Name}} DESC
+LIMIT ?, ?;
 
+            {{end -}}
         {{end -}}
-    {{end -}}
-{{end -}}
+    {{ end }}
 
 
 {{end}}
