--- a/templates/mysql_selects_indexed_simple.tmpl
+++ b/templates/mysql_selects_indexed_simple.tmpl
@@ -13,7 +13,7 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
+    `{{- $field.Name}}` = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
     {{- end}}{{- if eq $select.IsPrimary true }};{{- end}}
 {{ if eq $select.IsPrimary false -}}LIMIT ?, ?;{{- end}}
         {{ end -}}
@@ -30,7 +30,7 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
+    `{{- $field.Name}}` = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
     {{- end}}
 FOR UPDATE;
         {{ end -}}
@@ -47,7 +47,7 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}} 
-    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true}} AND {{ end -}} 
+    `{{- $field.Name}}` = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
     {{- end}} 
 ORDER BY {{$timeField.Name}} ASC
 LIMIT ?, ?;
@@ -60,7 +60,7 @@ SELECT {{ range $field := $entity.Fields -}}
 FROM {{$entity.Name}}
 WHERE 
     {{range $field := $select.Fields -}}
-    `{{- $field.Name}}` = ? {{- if ne $field.IsLast true }} AND {{ end -}} 
+    `{{- $field.Name}}` = ? {{ if ne $field.IsLast true }}AND {{ end -}} 
     {{- end}} 
 ORDER BY {{$timeField.Name}} DESC
 LIMIT ?, ?;
