--- a/templates/mysql_creates.tmpl
+++ b/templates/mysql_creates.tmpl
@@ -1,14 +1,23 @@
 {{- range $entity := .Entities -}}
-CREATE TABLE IF NOT EXISTS `{{$entity.Name}}` ( {{range $field := $entity.Fields}}
-    `{{$field.Name}}` {{$field.Type}} {{$field.Postfix}},{{- end}}  
-    {{ range $index := $entity.Indexes}}
-        {{- if eq $index.Type "primary" -}}
+CREATE TABLE IF NOT EXISTS `{{$entity.Name}}` (
+    {{- /* fields */ -}}
+    {{- range $field := $entity.Fields}}
+    `{{- $field.Name }}` {{ $field.Type }} {{ $field.Postfix }},{{- end}}
+    {{- /* indexes */ -}}
+    {{- range $index := $entity.Indexes }}
+        {{- if eq $index.Type "primary"}}
     PRIMARY KEY (`{{$entity.PrimaryKeysIdentifiers}}`)
             {{- if eq $index.HasComma true }},{{end -}}
         {{- else}}
     {{$index.TypePrefix}}INDEX `{{$index.Name}}` {{$index.FieldNamesIdentifiers}}
             {{- if eq $index.HasComma true }},{{end -}}
         {{- end}}
+    {{- end}}
+    {{- /* constrains */ -}}
+    {{- range $constraint := $entity.Constraints }}
+    CONSTRAINT `{{$constraint.Name}}`
+        FOREIGN KEY ({{$constraint.ForeignKeyFields}})
+        REFERENCES `{{$constraint.TableName}}` ({{$constraint.ReferenceFields}})
     {{- end}})
 ENGINE = InnoDB;
 
