--- a/templates/selects_simple_mysql.tmpl
+++ b/templates/selects_simple_mysql.tmpl
@@ -4,6 +4,6 @@ SELECT {{ range $field := $entity.Fields -}}
             `{{$field.Name}}`
             {{- if eq $field.HasComma true}},{{end -}}
         {{- end}}
-FROM {{$entity.Name}};
+FROM `{{$entity.Name}}`;
 
 {{end -}}
