--- a/templates/selects_indexed_simple_pg.tmpl
+++ b/templates/selects_indexed_simple_pg.tmpl
@@ -10,7 +10,7 @@ SELECT {{ range $field := $entity.Fields -}}
             "{{$field.Name}}"
             {{- if eq $field.HasComma true}},{{end -}}
         {{- end}}
-FROM {{$entity.Name}}
+FROM "{{$entity.Name}}"
 WHERE 
     {{range $field := $select.Fields -}} 
     "{{- $field.Name}}" = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
@@ -27,7 +27,7 @@ SELECT {{ range $field := $entity.Fields -}}
             "{{$field.Name}}"
             {{- if eq $field.HasComma true}},{{end -}}
         {{- end}}
-FROM {{$entity.Name}}
+FROM "{{$entity.Name}}"
 WHERE 
     {{range $field := $select.Fields -}} 
     "{{- $field.Name}}" = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
@@ -44,7 +44,7 @@ SELECT {{ range $field := $entity.Fields -}}
             "{{$field.Name}}"
             {{- if eq $field.HasComma true}},{{end -}}
         {{- end}}
-FROM {{$entity.Name}}
+FROM "{{$entity.Name}}"
 WHERE 
     {{range $field := $select.Fields -}} 
     "{{- $field.Name}}" = ? {{ if ne $field.IsLast true}}AND {{ end -}} 
@@ -57,7 +57,7 @@ SELECT {{ range $field := $entity.Fields -}}
             "{{$field.Name}}"
             {{- if eq $field.HasComma true}},{{end -}}
         {{- end}}
-FROM {{$entity.Name}}
+FROM "{{$entity.Name}}"
 WHERE 
     {{range $field := $select.Fields -}}
     "{{- $field.Name}}" = ? {{ if ne $field.IsLast true }}AND {{ end -}} 
